fix(p7): keep doctor Java 17 compatible